Revision history for Data::Currency

0.03
    - Added workaround for name returning Candian in older Locale::Currency

0.02 Sun Feb 11 15:37:5 2007
    - Fixed test skip count when Test::MockObject isn't installed

0.01
    - First version, released on an unsuspecting world.